tests/paczka1/fuzzy1/23129347.err
Error in line 8: 7Q66x A766 57,6
Error in line 7: jUObHTXhzq S437 49,7
Error in line 13: jUObHTXhzq A814 7,7
Error in line 11: 7Q66x A814 25,3
Error in line 22: 7Q66x S303 48,2
Error in line 16: APYWCZbaB A766 67,9
Error in line 26: zkivFl6b4c A766 44,0
Error in line 33: APYWCZbaB S43d 95,6
Error in line 31: APYWCZbaB A814 426,7
Error in line 38: S437 S303 51,4
